fixed script issue

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase|Montaga" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="portfolio/css/styles.css" />
+  <script src="portfolio/scripts/myscript.js"></script>
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
