added font-awesome social media buttons and footer

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 
 <html lang="utf-8">
 <head>
-  <title>Portfoio Page</title>
+<title>Portfoio Page</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://use.fontawesome.com/8e62296009.js"></script>
 
 
-
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 
 
@@ -143,16 +144,34 @@
       </div>
     </div>
   </div>
+
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-sm-4">
+        <a class="btn btn-block btn-social btn-twitter">
+          <span class="fa fa-twitter fa-3x"></span>
+        </a>
+      </div>
+      <div class="col-sm-4">
+        <a class="btn btn-block btn-social btn-linkedin">
+          <span class="fa fa-linkedin fa-3x"></span>
+        </a>
+      </div>
+      <div class="col-sm-4">
+        <a class="btn btn-block btn-social btn-facebook">
+         <span class="fa fa-facebook fa-3x"></span>
+        </a>
+      </div>
+    </div>
+  </div>
+  </div>
+<div class="container-fluid text-center funstuff">
+  <div class="row">
+    <div class=col-sm-12>
+     <footer class="text-center">Created by Christopher Michael Augg &#xA9;2017
+     </footer>
+    </div>
+  </div>
 </div>
-
-
-
-<div class="container-fluid funstuff">
-  <h1>Fun Stuff</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-
-
 </body>
 </html>
