fixed some mobile first responsive design issues

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
 <div id="about" class="container-fluid text-center about">
   <div class="jumbotron">
+    <div class="row">
+      <div class="col-xs-12">
 
     <img vspace="40" class="img-circle img-responsive" src="https://media.licdn.com/mpr/mpr/shrink_100_100/AAEAAQAAAAAAAASzAAAAJDM5NjMzMDNhLTA0MjgtNGQ5Ni05MjMzLWI1MWY4OTA1ZTVkMw.jpg" alt="Picture-Me">
 
@@ -54,7 +56,7 @@
       <h2>Hello, my name is <strong>Christopher Augg</strong>. I have practical experience in developing native Android and iOS applications. I am currently enhancing my skillset to include Front-End web development, Back-End web development, and Devops with aspirations of becoming a Full-Stack developer. Computer technologies and problem solving have been my passions since I was very young. When I am not coding, building computers, or troubleshooting; I constantly like to learn new things.  </h2>
 
       <h2 class="spacer">Android Development | iOS Development | Web Development</h2>
-
+    </div>
   </div>
 </div>
 
@@ -116,8 +118,6 @@
         <!--/well-->
     </div>
 </div>
-
-
 
 <!-- Contact me -->
 <div id="contact" class="container-fluid contact">
